--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,13 +1,17 @@
 @use '../../../styles/mixins' as *;
 
+.page-container {
+  padding: unset;
+}
+
 .home {
   min-height: 100dvh;
-  color: var(--light-bg);
+  color: #ffffff;
   background-color: white;
   padding: 0rem 0rem 3.5rem 0rem;
 
   &__content {
-    background-color: var(--dark-bg);
+    background-color: rgba(53, 39, 58, 1);
   }
 
   &__header {
@@ -37,7 +41,7 @@
   &__title {
     order: 1;
     color: var(--color-title);
-    font-size: clamp(3rem, 7vw, 8rem);
+    font-size: clamp(3rem, 2.5rem + 3vw, 7rem);
     line-height: 0.82;
     width: 12ch;
   }
@@ -64,14 +68,14 @@
 
   &__description {
     color: rgba(255, 255, 255, 0.86);
-    font-size: clamp(1em, 2vw, 5rem);
+    font-size: var(--font-size-m);
   }
 
   &__cta {
-    @include flex-center(1rem);
+    @include flex-center(0.8rem);
     padding: 0.7em 1.2rem;
     border-radius: 10px;
-    font-size: clamp(1rem, 1.5vw, 2.8rem);
+    font-size: clamp(1.1rem, 0.7rem + 0.7vw, 1.8rem);
     background-color: var(--color-title);
     color: black;
     font-weight: bolder;
@@ -83,7 +87,7 @@
   }
 
   &__cta-icon {
-    width: clamp(1rem, 2vh, 2.4rem);
+    width: clamp(1.2rem, 2vh, 1.8rem);
   }
 }
 
@@ -97,7 +101,7 @@
 
   &__title {
     color: var(--color-title);
-    font-size: clamp(2.8rem, 6vw, 12rem);
+    font-size: clamp(3rem, 2rem + 2vw, 6rem);
   }
 
   &__ending-soon {
@@ -105,9 +109,10 @@
   }
 
   &__section-title {
-    color: var(--light-bg);
+    color: #ffffff;
     font-family: var(--font-mulish);
-    font-size: clamp(1rem, 1.2vw, 5rem);
+    font-size: clamp(1rem, 0.4rem + 0.8vw, 2rem);
+    font-weight: 100;
   }
 
   &__scroll {
@@ -165,13 +170,13 @@
   }
 
   &__category {
-    font-size: clamp(0.6rem, 1.3vw, 1.9rem);
+    font-size: clamp(0.8rem, 0.1rem + 0.6vw, 1.2rem);
   }
 
   &__card-title {
     margin: 0;
-    font-size: clamp(1rem, 2.1vh, 2.5rem);
-    width: clamp(12ch, 14vw, 16ch);
+    font-size: clamp(1.2rem, 0.8rem + 0.8vw, 1.8rem);
+    width: clamp(16ch, 16vw, 19ch);
   }
 
   &__deadline {
@@ -182,7 +187,7 @@
     background-color: #ffcfa1;
     font-weight: 500;
     color: black;
-    font-size: clamp(0.6rem, 1.2vh, 2rem);
+    font-size: clamp(0.7rem, 0.2rem + 0.6vh, 1rem);
   }
 
   &__tools {
@@ -203,7 +208,7 @@
     border-radius: 20px;
     padding: 0.2rem 0.7rem;
     background-color: #fee9d4;
-    font-size: clamp(0.6rem, 1.6vh, 2.3rem);
+    font-size: clamp(0.8rem, 0.1rem + 0.6vw, 1.2rem);
 
     &:not(.home-surveys__tab--active):hover {
       background-color: #ffcfa1;
@@ -258,22 +263,22 @@
   &__link {
     display: flex;
     flex-direction: column;
-    gap: 1em;
-    padding: 0.8rem 1rem;
+    gap: 1.3em;
+    padding: 0.8rem 1rem 0rem 1rem;
     border-radius: var(--border-right-radius) 5rem;
   }
 
   &__category {
     color: #ffcfa1;
-    font-size: clamp(1rem, 1vw, 1.6rem);
+    font-size: clamp(0.8rem, 0.2rem + 0.6vw, 1.1rem);
     padding-bottom: 0.1rem;
   }
 
   &__title {
     margin: 0;
-    color: var(--light-bg);
+    color: #ffffff;
     font-family: var(--font-mulish);
-    font-size: clamp(1rem, 1.8vw, 2rem);
+    font-size: clamp(1rem, 0.7rem + 0.7vw, 1.5rem);
   }
 
   &__deadline {
@@ -287,7 +292,7 @@
     padding: 0.25rem 0.5rem;
     border-radius: 0.25rem;
     background-color: #ffcfa1;
-    font-size: clamp(0.6rem, 1.4vh, 1.5rem);
-    color: var(--dark-bg);
+    font-size: clamp(0.6rem, 0.4rem + 0.5vh, 0.9rem);
+    color: rgba(53, 39, 58, 1);
   }
 }
